# BigData4

./: README.md  koncerty_polska.csv  main.py  pyproject.toml  zad4.ipynb
